testsuite/poke.pkl/mul-diag-1.pk
/* { dg-do compile } */

var s = "foo"
        * "bar"; /* { dg-error "invalid operand.*\n.*expected integral" } */
